infra/k8s/services/delivery-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: delivery-svc
  namespace: backend
spec:
  selector:
    app: delivery
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
