infra/k8s/services/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: backend
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
