infra/k8s/services/notification-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifications-svc
  namespace: backend
spec:
  selector:
    app: notifications
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8002
