infra/k8s/services/orders-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-svc
  namespace: backend
spec:
  selector:
    app: orders
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8003
