infra/k8s/services/simulator-svc.yaml

apiVersion: v1
kind: Service
metadata:
  name: simulator-svc
  namespace: backend
spec:
  selector:
    app: smiulator 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
