infra/k8s/services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: backend
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: frontend.localhost
      http:
        paths:
          - path: /api/v1/orders(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: orders-svc
                port:
                  number: 8003

          - path: /api/v1/menu(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: orders-svc
                port:
                  number: 8003

          - path: /api/v1/order-tracking/.*/ws
            pathType: ImplementationSpecific
            backend:
              service:
                name: notifications-svc
                port:
                  number: 8002

          - path: /.*
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
